--- a/.github/workflows/autotag.yaml
+++ b/.github/workflows/autotag.yaml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     if: github.event.pull_request.merged == true
